Reorganize tools folder

--- a/tools/compile_options/compile.html
+++ b/tools/compile_options/compile.html
@@ -3,7 +3,7 @@
        - Initialized 6-15-2020, essentially copied from url.   -->
 <html>
 <head>
-  <link rel="stylesheet" href="compile_instructions.css"/>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
 
