--- a/tools/startup/output_pane.html
+++ b/tools/startup/output_pane.html
@@ -2,7 +2,7 @@
      Might add something of a startup page to choose old files, etc. -->
 <html>
 <head>
-  <link rel="stylesheet" href="output.css"/>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <h1> INSTRUCTIONS </h1>
@@ -11,19 +11,23 @@
 
     <h2> Running a program: </h2>
 
-    Type in your Fortran 90 program into the Editor Pane on the left (The
+    Type in your Fortran program into the Editor Pane on the left (The
     default is a simple Hello World Program). Click the RUN button on the top
     left of the Output pane to execute the following three-part command in a
     terminal window, separated by semicolons: <br><br>
 
     <code>cd ~/Documents/GitHub/Fossil/test; <br>
-       /usr/local/bin/gfortran -o f [file_name].f90;<br>
-       ./f</code> <br><br>
+       /usr/local/bin/gfortran -o f [file_name].[ext]; <br>
+       ./f </code> <br><br>
 
     The program named <code-inline>file_name</code-inline> is determined with
     the program name field above the output pane. Change this to match the
-    name given in the editor pane, i.e. <code-inline>PROGRAM [file_name] ...
-      ... END PROGRAM [file_name]</code-inline>.
+    name given in the editor pane, that is: <br><br>
+
+    <code>PROGRAM [file_name] <br>
+      ... <br>
+      ... <br>
+      END PROGRAM [file_name] </code> <br><br>
 
 
     <h2> Checking Syntax: </h2>
@@ -35,7 +39,7 @@
 
     <h2> Links: </h2>
     <a href="http://github.com/nrwade0/Fossil" target="_blank">
-      GitHub Repo
+      GitHub Repo (currently private)
     </a>
 
   </p>
